fixed the navbar so it could stretch far

--- a/henry-nunez-portfolio/src/app/_lib/Header/styles.css
+++ b/henry-nunez-portfolio/src/app/_lib/Header/styles.css
@@ -13,17 +13,30 @@
   --myrtleGreen: #267675;
 }
 
-.container {
+@layer base {
+  .nav_bar {
+    max-width: 100%;
+  }
+}
+
+.nav_bar {
   width: 100%;
   height: 84px;
   line-height: 80px;
-  /* border-bottom: 1px solid var(--vermilion); */
+  border-bottom: 1px solid var(--vermilion);
+  background-color: var(--darkerBlack);
 }
+/* .nav_bar {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+} */
 .title {
   display: flex;
   flex-direction: row;
 }
 .nav_wrapper {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -60,6 +73,17 @@
 .mobile_logo {
   display: none;
 }
+.header_shrink {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 84px;
+  line-height: 80px;
+  box-shadow: 5px 5px 15px -5px var(--vermilion) !important;
+  z-index: 99;
+  transition: 0.8s;
+}
 
 @media (max-width: 992px) {
   .navigation {
@@ -68,7 +92,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #03020188;
+    background: var(--darkerBlack);
     z-index: 99999;
     display: none;
   }
