--- a/henry-nunez-portfolio/src/app/globals.css
+++ b/henry-nunez-portfolio/src/app/globals.css
@@ -2,9 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
-  border: 2px solid yellow;
-} */
+* {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  box-sizing: border-box;
+}
 
 :root {
   --lapisLazuli: #00557d;
@@ -26,11 +29,9 @@
     --myrtleGreen: #267675;
   }
 }
-html {
-  height: 100%;
-}
 
-body {
+body,
+html {
   color: var(--vermilion);
   background: linear-gradient(
     var(--lapisLazuli) 0% 10%,
@@ -43,9 +44,10 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: Arial, Helvetica, sans-serif;
-}
-.realBody {
-  display: grid;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 @layer utilities {
